Fixes #6 Too dark listings in the Featured listings block while hovering

--- a/less/intelli/card.less
+++ b/less/intelli/card.less
@@ -556,14 +556,14 @@
 		bottom: 0;
 		top: 0;
 		border-radius: @border-radius-base;
-		background: rgba(0,0,0,0.6);
+		background: rgba(0,0,0,0.5);
 		padding: 20px;
 		font-size: 14px;
 		line-height: 16px;
 		.transition(all .2s ease);
 
 		&:hover {
-		  background: rgba(0,0,0,0.9);
+		  background: rgba(0,0,0,0.7);
 		}
 
 		a {
